[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/button_small.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/dogicapixel.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/UI/PauseMenu.gd" type="Script" id=3]
[ext_resource path="res://Assets/Fonts/dogicapixelbold.ttf" type="DynamicFontData" id=4]


[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
_quit_path = NodePath("VBoxContainer/Buttons/quit")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="paused" type="Label" parent="VBoxContainer"]
margin_right = 184.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 2 )
text = "paused"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 22.0
margin_right = 184.0
margin_bottom = 162.0
custom_constants/separation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="TextureButton" parent="VBoxContainer/Buttons"]
margin_right = 184.0
margin_bottom = 44.0
texture_normal = ExtResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer/Buttons/Continue"]
margin_left = 33.8924
margin_top = 17.2435
margin_right = 139.892
margin_bottom = 31.2435
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.12549, 0.156863, 0.239216, 1 )
text = "continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="TextureButton" parent="VBoxContainer/Buttons"]
margin_top = 48.0
margin_right = 184.0
margin_bottom = 92.0
texture_normal = ExtResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer/Buttons/menu"]
margin_left = 23.7841
margin_top = 18.4327
margin_right = 181.784
margin_bottom = 32.4327
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.12549, 0.156863, 0.239216, 1 )
text = "main menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="TextureButton" parent="VBoxContainer/Buttons"]
margin_top = 96.0
margin_right = 184.0
margin_bottom = 140.0
texture_normal = ExtResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer/Buttons/quit"]
margin_left = 61.2441
margin_top = 17.8381
margin_right = 219.244
margin_bottom = 31.8381
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.12549, 0.156863, 0.239216, 1 )
text = "quit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="VBoxContainer/Buttons/Continue" to="." method="_on_Continue_button_up"]
[connection signal="button_up" from="VBoxContainer/Buttons/menu" to="." method="_on_menu_button_up"]
[connection signal="button_up" from="VBoxContainer/Buttons/quit" to="." method="_on_quit_button_up"]
